[package]
name = "bp7"
version = "0.10.5"                                                               # managed by release.sh
authors = ["Lars Baumgaertner <baumgaertner@cs.tu-darmstadt.de>"]
edition = "2018"
description = "Rust implementation of dtn Bundle Protocol Version 7 ([RFC 9171]"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtn7/bp7-rs"
categories = ["encoding"]
readme = "README.md"

[profile.release]
#debug = true
lto = true

[[bin]]
name = "bp7"
required-features = ["binary-build"]

[lib]
name = "bp7"
crate-type = ["staticlib", "cdylib", "rlib"]

[dev-dependencies]
criterion = "0.5.1"
test-case = { version = "3.3.1" }

[[bench]]
name = "benchmark"
harness = false

[features]

default = ["binary-build"]
binary-build = ["instant"]
benchmark-helpers = ["instant"]

[dependencies]
humantime = "2.1.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = "1.0.61"
serde_bytes = "0.11.5"
crc = "3.0.1"
thiserror = "1.0.23"
bitflags = "2.2.1"

# non wasm config

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
nanorand = { version = "0.7.0", default-features = true }
instant = { version = "0.1.9", features = ["now"], optional = true }

# wasm specific

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "0.4.20"
nanorand = { version = "0.7.0", features = ["getrandom"] }
instant = { version = "0.1.9", features = ["stdweb", "now"], optional = true }
