[package]
name = "bp7"
version = "0.10.7"                                                               # managed by release.sh
authors = ["Lars Baumgaertner <baumgaertner@cs.tu-darmstadt.de>"]
edition = "2018"
description = "Rust implementation of dtn Bundle Protocol Version 7 ([RFC 9171]"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtn7/bp7-rs"
categories = ["encoding"]
readme = "README.md"

[profile.release]
#debug = true
lto = true

[[bin]]
name = "bp7"
required-features = ["binary-build"]

[lib]
name = "bp7"
crate-type = ["staticlib", "cdylib", "rlib"]

[dev-dependencies]
criterion = "0.7.0"
test-case = "3.3.1"

[[bench]]
name = "benchmark"
harness = false

[features]

default = ["binary-build"]
binary-build = []
bpsec = ["dep:sha2", "dep:hmac"]

[dependencies]
humantime = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.143"
serde_bytes = "0.11.17"
crc = "3.3.0"
thiserror = "2.0.16"
bitflags = "2.9.4"
web-time = "1.1.0"

# bpsec dependencies
sha2 = { version = "0.10.9", optional = true }
hmac = { version = "0.12.1", optional = true }

# non wasm config

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
nanorand = { version = "0.8.0", default-features = true }

# wasm specific

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "0.4.20"
nanorand = { version = "0.8.0", features = ["getrandom"] }
